<resources>
    <string name="app_name">All Vehicle Info - RTO Exam</string>
    <string name="policy"><b>Disclaimer :</b> We do not have any association with any state RTO. All vehicle information about vehicle owners shown in the app are publicly available on the Parivahan website (https://parivahan.gov.in/parivahan/). We are only acting as an intermediary to make this information easily available to the users through the mobile app.</string>
    <string name="attended">Question attended : </string>
    <string name="correct">Correct answers : </string>
    <string name="wrong">Wrong answers : </string>
    <string name="examdate">Exam Date</string>
    <string name="pass">Pass</string>
    <string name="fail">Fail</string>
    <string name="Give_way">Give way</string>
    <string name="Stop">Stop</string>
    <string name="Straight_prohibited">Straight prohibited</string>
    <string name="One_way">One way</string>
    <string name="Vehicles_prohibited_in_both_directions">Vehicles prohibited in both directions</string>
    <string name="Horn_prohibited">Horn prohibited</string>
    <string name="Pedestrians_prohibited">Pedestrians prohibited</string>
    <string name="Cycles_prohibited">Cycles prohibited</string>
    <string name="Right_turn_prohibited">Right turn prohibited</string>
    <string name="Left_turn_prohibited">Left turn prohibited</string>
    <string name="U_turn_prohibited">U-turn prohibited</string>
    <string name="Overtaking_prohibited">Overtaking prohibited</string>
    <string name="Trucks_prohibited">Trucks prohibited</string>
    <string name="Tonga_prohibited">Tonga prohibited</string>
    <string name="All_motor_vehicles_prohibited">All motor vehicles prohibited</string>
    <string name="Hand_cart_prohibited">Hand cart prohibited</string>
    <string name="Bullock_and_hand_carts_prohibited">Bullock and hand carts prohibited</string>
    <string name="No_parking">No parking</string>
    <string name="No_parking_or_stopping">No parking or stopping</string>
    <string name="Speed_limit">Speed limit</string>
    <string name="Axle_load_limit">Axle load limit</string>
    <string name="Width_limit">Width limit</string>
    <string name="Weight_limit">Weight limit</string>
    <string name="Length_limit">Length limit</string>
    <string name="Load_limit">Load limit</string>
    <string name="Restriction_ends">Restriction ends</string>
    <string name="Turn_left">Turn left</string>
    <string name="Turn_Right">Turn Right</string>
    <string name="Ahead_or_turn_left">Ahead or turn left</string>
    <string name="Ahead_or_turn_right">Ahead or turn right</string>
    <string name="Ahead">Ahead</string>
    <string name="Keep_left">Keep left</string>
    <string name="Sound_horn">Sound horn</string>
    <string name="Buses_only">Buses only</string>
    <string name="Right_hand_curve">Right hand curve</string>
    <string name="Left_hand_curve">Left hand curve</string>
    <string name="Right_hand_pin_bend">Right hand pin bend</string>
    <string name="Left_hand_pin_bend">Left hand pin bend</string>
    <string name="Right_reverse_bend">Right reverse bend</string>
    <string name="Narrow_bridge">Narrow bridge</string>
    <string name="Gap_in_median">Gap in median</string>
    <string name="Cycle_crossing">Cycle crossing</string>
    <string name="Pedestrian_crossing">Pedestrian crossing</string>
    <string name="School_ahead">School ahead</string>
    <string name="Men_at_work">Men at work</string>
    <string name="Roundabout">Roundabout</string>
    <string name="Narrow_road">Narrow road</string>
    <string name="Road_widens">Road widens</string>
    <string name="Side_road_left">Side road left</string>
    <string name="Side_road_right">Side road right</string>
    <string name="Major_road">Major road</string>
    <string name="Staggered_intersection">Staggered intersection</string>
    <string name="Y_intersection">Y-intersection</string>
    <string name="T_intersection">T-intersection</string>
    <string name="Reduced_carriageway">Reduced carriageway</string>
    <string name="Two_way">Two way</string>
    <string name="Cross_road">Cross road</string>
    <string name="Truck_lay_bay">Truck lay bay</string>
    <string name="Toll_booth_ahead">Toll booth ahead</string>
    <string name="Parking_this_side">Parking this side</string>
    <string name="Parking_both_sides">Parking both sides</string>
    <string name="Scooter_and_motor_cycle_stand">Scooter and motor cycle stand</string>
    <string name="Taxi_stand">Taxi stand</string>
    <string name="Auto_rickshaw_stand">Auto-rickshaw stand</string>
    <string name="Public_telephone">Public telephone</string>
    <string name="Filling_station">Filling station</string>
    <string name="Hospital">Hospital</string>
    <string name="First_aid_post">First aid post</string>
    <string name="Eating_place">Eating place</string>
    <string name="Light_refreshment">Light refreshment</string>
    <string name="No_through_road">No through road</string>
    <string name="No_through_side_road">No through side road</string>
    <string name="Resting_place">Resting place</string>
    <string name="Pedestrian_subway">Pedestrian subway</string>
    <string name="Repair_facility">Repair facility</string>
    <string name="que">Que.</string>
    <string name="noresult">No Data Found</string>
    <string name="result">Result</string>
    <string name="time">Time</string>
    <string name="passmsg">Congratulation, You are pass in driving licence test!</string>
    <string name="failmsg">Sorry, You are fail in driving licence test. \n try again later.</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="activity_insurance_details">Insurance Details</string>
    <string name="activity_search_finance">Finance Details</string>
    <string name="activity_search_insurance">Insurance Details</string>
    <string name="activity_search_vehicle">Vehicle Details</string>
    <string name="app_internet_msg">You are not connected to internet!</string>
    <string name="btn_go_back_search_again">Go Back &amp; Search Again</string>
    <string name="btn_retry">Retry</string>
    <string name="btn_try_again">Try Again</string>
    <string name="challan_rating_count">challan_rating_count</string>
    <string name="content_desc">Desc</string>
    <string name="error_count">error_count</string>
    <string name="error_message">Sorry. Please try again?</string>
    <string name="exit_home_page_rating_count">exit_home_page_rating_count</string>
    <string name="first_launch">first_launch</string>
    <string name="format_brand_name">by %1$s</string>
    <string name="format_challan_no">Challan #%1$s</string>
    <string name="format_price">₹ %1$s</string>
    <string name="format_views">%1$d Views</string>
    <string name="loading">Loading…</string>
    <string name="no_challan_info">An error occurred while fetching challan details, please try again!</string>
    <string name="no_finance_info">An error occurred while fetching vehicle finance details, please try again!</string>
    <string name="no_info">An error occurred while fetching registration details, please try again!</string>
    <string name="no_insurance_info">An error occurred while fetching vehicle insurance details, please try again!</string>
    <string name="no_network_message">It seems you\'re not connected to the internet!</string>
    <string name="no_result_found">Not found!</string>
    <string name="no_result_found_finance_info">Finance information is not available for this vehicle as per RTO records. Please check again in 10 days.</string>
    <string name="no_result_found_info">The details of this vehicle couldn\'t be found. It maybe due to one of the following reasons.1010• The vehicle\'s information is not updated by the RTO office to the online RTO database yet.1010• Recently bought/sold/transferred vehicles might take some time to get updated, check after few days.1010• Or, this vehicle number isn\'t registered yet.1010Try searching other vehicle numbers.</string>
    <string name="no_result_found_insurance_info">Insurance information is not available for this vehicle as per RTO records. Please check again in 10 days.</string>
    <string name="note">Note : This feature is in testing.Details for your licence may not be available at the moment.</string>
    <string name="oops">Oops!</string>
    <string name="placeholder_speech_prompt_add_vehicle_no">Please speak the vehicle number</string>
    <string name="share_challan_detail">Hey, Checkout your challan history on RTO Vehicle Owner Details App.</string>
    <string name="share_error">Unable to share this time, try again later.</string>
    <string name="share_finance_detail">Hey, I found vehicle finance details as below:1010Vehicle Number: %1$s1010Owner Name: %2$s 1010Sent via RTO Vehicle Info App.</string>
    <string name="share_insurance_detail">Hey, I found vehicle insurance details as below:1010Vehicle Number: %1$s1010Owner Name: %2$s 1010Sent via RTO Vehicle Info App.10Download link: https://vehicledetails.page.link/dmCn</string>
    <string name="share_vehicle_detail">Hey, I found vehicle details as below:1010Vehicle Number: %1$s1010Owner Name: %2$s1010Registration Authority: %3$s1010Registration Date: %4$s1010Vehicle Model: %5$s1010Vehicle Class: %6$s1010Vehicle Type: %7$s1010Chassis No: %8$s1010Engine No: %9$s 1010Sent via RTO Vehicle Owner Details App.</string>
    <string name="submitting">Submitting…</string>
    <string name="txt_body_type_desc">Body Type</string>
    <string name="txt_btn_check_challan">Check Challan</string>
    <string name="txt_btn_check_hidden_value">Show</string>
    <string name="txt_btn_check_vehicle_details">View RC</string>
    <string name="txt_btn_view_complete_rc">View Complete RC</string>
    <string name="txt_challan_amount">Amount</string>
    <string name="txt_challan_date">Challan Date</string>
    <string name="txt_challan_disclaimer">This data is fetched as-is from official sources and is shown as is. Please contact the respective department for any concerns. Keep checking these challans for additions and updations to your challan status.</string>
    <string name="txt_challan_status">Status</string>
    <string name="txt_chassis_no">Chassis No</string>
    <string name="txt_check_challan">Check Pending Challans</string>
    <string name="txt_check_challan_description">Check status of pending challans of your Vehicle</string>
    <string name="txt_check_vehicle_details_description">Check registration details of your Vehicle</string>
    <string name="txt_confirm_delete_search_history">Are you sure you want to remove this ?</string>
    <string name="txt_connection_error_title">Connection error</string>
    <string name="txt_device_no_speech_recognition">Your device does not support Speech Recognition</string>
    <string name="txt_engine_no">Engine No</string>
    <string name="txt_financier">Finance Company Name</string>
    <string name="txt_fitness_upto">Fitness Up to</string>
    <string name="txt_fuel_norms">Fuel Norms</string>
    <string name="txt_fuel_type">Fuel Type</string>
    <string name="txt_full_specs">See Full Specs</string>
    <string name="txt_insurance_age">Insurance Expiring in</string>
    <string name="txt_insurance_company">Insurance Company</string>
    <string name="txt_insurance_upto">Insurance Up to</string>
    <string name="txt_maker_model">Maker Model</string>
    <string name="txt_manufacture_month_year">Manufacture Month/Year</string>
    <string name="txt_no">No</string>
    <string name="txt_not_now">NOT NOW</string>
    <string name="txt_open_settings">OPEN SETTINGS</string>
    <string name="txt_owner_name">Owner Name</string>
    <string name="txt_ownership">Owner Serial No</string>
    <string name="txt_payment_date">Payment Date</string>
    <string name="txt_reg_no">Registration No.</string>
</resources>