<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/emptylayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible">

    <TextView
        android:id="@+id/oopsTv"
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:shadowColor="@color/white"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="3"
        android:text="@string/oops"
        android:textColor="#ffd32027" />

    <TextView
        android:id="@+id/noResultTv"
        android:textSize="16sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/oopsTv"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/no_result_found"
        android:textColor="#b3000000" />

    <TextView
        android:id="@+id/noResultInfoTv"
        android:textSize="16sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/noResultTv"
        android:padding="16dp"
        android:text="@string/no_result_found_info"
        android:textColor="#b3000000"
        android:visibility="gone" />

</RelativeLayout>
