<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/main_content_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/tvValuateCon">


        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="true"
                android:orientation="vertical">

                <include
                    android:id="@+id/errorContainer"
                    layout="@layout/layout_error"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:visibility="gone" />

                <FrameLayout
                    android:id="@+id/native_banner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <LinearLayout
                    android:id="@+id/contentLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="3dp"
                    android:layout_marginRight="3dp"
                    android:focusableInTouchMode="true"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <include
                        layout="@layout/layout_vehicle_details_img"
                        android:layout_width="match_parent"
                        android:layout_height="210dp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:background="@color/white"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <TextView
                            android:id="@+id/ownerName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/txt_owner_name"
                            android:textColor="@color/text_color" />

                        <TextView
                            android:id="@+id/ownerNameValue"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:textColor="@color/text_color"
                            android:textSize="18sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:background="@color/white"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <TextView
                            android:id="@+id/registrationNo"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/txt_reg_no"
                            android:textColor="@color/text_color" />

                        <TextView
                            android:id="@+id/registrationNoValue"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:textColor="@color/text_color"
                            android:textSize="18sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="5dp"
                        android:background="@color/white"
                        android:orientation="vertical">

                        <FrameLayout
                            android:id="@+id/betweenAd"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/cvOwnership"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:background="@color/white"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <TextView
                            android:id="@+id/ownership"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/txt_ownership"
                            android:textColor="@color/text_color" />

                        <TextView
                            android:id="@+id/ownershipValue"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:textColor="@color/text_color"
                            android:textSize="18sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/cvFinancier"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:background="@color/white"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <TextView
                            android:id="@+id/financier"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/txt_financier"
                            android:textColor="@color/text_color" />

                        <TextView
                            android:id="@+id/financierValue"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:textColor="@color/text_color"
                            android:textSize="18sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:background="@color/white"
                        android:orientation="vertical">

                        <FrameLayout
                            android:id="@+id/betweenAd1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <FrameLayout
        android:id="@+id/tvValuateCon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignWithParentIfMissing="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="2dp"
        android:animateLayoutChanges="true"
        android:background="@color/white"
        android:visibility="gone">

        <Button
            android:id="@+id/btnViewCompleteRC"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:background="@color/colorPrimaryDark"
            android:minWidth="100dp"
            android:text="@string/txt_btn_view_complete_rc"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </FrameLayout>

</RelativeLayout>
